; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_struct.c_t3.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_struct.c_t3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i32, %struct.anon.0 }
%struct.anon.0 = type { i8, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @t3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t3() #0 {
  %1 = alloca %struct.anon, align 4
  %2 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 0
  store i32 61, i32* %2, align 4
  %3 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 1
  %4 = getelementptr inbounds %struct.anon.0, %struct.anon.0* %3, i32 0, i32 0
  store i8 3, i8* %4, align 4
  %5 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 1
  %6 = getelementptr inbounds %struct.anon.0, %struct.anon.0* %5, i32 0, i32 1
  store i32 3, i32* %6, align 4
  %7 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 1
  %10 = getelementptr inbounds %struct.anon.0, %struct.anon.0* %9, i32 0, i32 0
  %11 = load i8, i8* %10, align 4
  %12 = sext i8 %11 to i32
  %13 = add nsw i32 %8, %12
  %14 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 1
  %15 = getelementptr inbounds %struct.anon.0, %struct.anon.0* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %13, %16
  %18 = call i32 @expect(i32 67, i32 %17)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
